@@ -1,0 +1,31 @@
+/*******************************************************************************
+ * Copyright (c) 2024 Obeo.
+ * This program and the accompanying materials
+ * are made available under the terms of the Eclipse Public License v2.0
+ * which accompanies this distribution, and is available at
+ * https://www.eclipse.org/legal/epl-2.0/
+ *
+ * SPDX-License-Identifier: EPL-2.0
+ *
+ * Contributors:
+ *     Obeo - initial API and implementation
+ *******************************************************************************/
+package org.eclipse.sirius.components.collaborative.widget.reference;
+
+import java.util.List;
+
+import org.eclipse.sirius.components.core.api.IImagePathService;
+import org.springframework.stereotype.Service;
+
+/**
+ * Used to provide access to the images used by the reference widget.
+ *
+ * @author sbegaudeau
+ */
+@Service
+public class ReferenceWidgetImagePathService implements IImagePathService {
+    @Override
+    public List<String> getPaths() {
+        return List.of("/reference-widget-images/");
+    }
+}
